<resources>
    <string name="app_name">Inventory App Stage 2</string>
    <string name="empty_view_title_text">Get started by adding some inventory. You can add your own item or add some dummy data.</string>
    <string name="qty_available">Qty. Available:</string>
    <string name="price">Price: $</string>
    <string name="unknown_price">Price not found.</string>
    <string name="media_format">Media Format</string>
    <string name="product_details">Product Details</string>
    <string name="hint_product_name">Enter product name here</string>
    <string name="hint_price">Enter item price here</string>
    <string name="supplier_information">Supplier Information</string>
    <string name="hint_supplier_name">Enter supplier name here</string>
    <string name="hint_phone">Enter supplier phone here</string>
    <string name="hint_quantity">Enter quantity here</string>
    <string name="editor_activity_title_new_inventory_item">Add New Inventory Item</string>
    <string name="editor_activity_edit_inventory_item">Edit Inventory</string>
    <string name="hardcover">Hardcover</string>
    <string name="paperback">Paperback</string>
    <string name="audiobook">Audiobook</string>
    <string name="kindle">Kindle</string>
    <string name="epub">Epub</string>
    <string name="mp3">MP3</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete this product</string>
    <string name="delete_all_inventory_dialog_msg">Delete all inventory in the database?</string>
    <string name="cancel">Cancel</string>
    <string name="action_delete_all">Delete all inventory</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_insert_inventory_failed">Error creating this inventory item.</string>
    <string name="editor_insert_inventory_successful">Your new inventory item was saved successfully.</string>
    <string name="editor_update_inventory_failed">Error trying to update inventory item.</string>
    <string name="editor_update_inventory_successful">Inventory item saved successfully.</string>
    <string name="delete_dialog_msg">Delete this inventory item?</string>
    <string name="editor_delete_inventory_item_failed">Error deleting this inventory item.</string>
    <string name="editor_delete_invenotry_item_successful">Inventory item deleted successfully.</string>
    <string name="editor_insert_nothing_entered_not_saving">Nothing was entered, so this entry was not saved to the database.</string>
    <string name="editor_insert_product_name_required">You must enter a product name in order to save this inventory item.</string>
    <string name="editor_insert_price_required">You must enter a price in order to save this inventory item.</string>
    <string name="editor_insert_quantity_required">You must enter a quantity in order to save this inventory item.</string>
    <string name="editor_insert_supplier_name_required">You must enter a supplier name in order to save this inventory item.</string>
    <string name="editor_insert_supplier_phone_required">You must enter a supplier phone in order to save this inventory item.</string>
    <string name="editor_update_inventory_less_than_zero">Sorry, there is no inventory left for this item.</string>
    <string name="click_to_edit_inventory_item">Click to edit this inventory item</string>
    <string name="click_to_call_supplier">Click number to call supplier</string>
    <string name="inventory_app_nav_bar">Inventory App Nav Bar</string>
    <string name="supplier_phone">Supplier Phone:</string>
    <string name="supplier_name">Supplier Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="price_label">Price:</string>
    <string name="media_type">Media Type:</string>
    <string name="product_name">Product Name:</string>
    <string name="record_sale">RECORD SALE</string>
    <string name="no_inventory_image">No Inventory Image</string>
    <string name="supplier_phone_header">Supplier Phone</string>
    <string name="supplier_name_header">Supplier Name</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="quantity_header">Quantity</string>
    <string name="price_header">Price</string>
    <string name="product_name_header">Product Name</string>
    <string name="unknown">unknown</string>

</resources>
