<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of inventory -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"
            tools:text="Product Name" />

        <TextView
            android:id="@+id/mediaType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:fontFamily="sans-serif"
            android:text="@string/media_format"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD"
            tools:text="Media Format" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:fontFamily="sans-serif"
            android:text="@string/price"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD"
            tools:text="price" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD"
            tools:text="1.00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:fontFamily="sans-serif"
            android:text="@string/qty_available"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD"
            tools:text="Qty Available" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD"
            tools:text="0" />
    </LinearLayout>

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="8dp"
        android:background="@color/colorButton"
        android:focusable="false"
        android:padding="8dp"
        android:text="@string/record_sale"
        android:textColor="@color/buttonText" />
</LinearLayout>

