<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ViewerActivity">

    <!-- Product Details -->
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/product_details"
            style="@style/SectionStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Product Name field -->
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/view_product_name"
                style="@style/EditorFieldStyle" />

            <!-- Media Type drop-down spinner -->
            <TextView
                android:id="@+id/view_media_type"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                style="@style/EditorFieldStyle"/>

            <!-- Price field -->
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
            android:id="@+id/view_price"
            style="@style/EditorFieldStyle" />

            <TextView
                android:id="@+id/view_quantity"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier Information -->
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/supplier_information"
            style="@style/SectionStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Supplier Name field -->
            <TextView
                android:id="@+id/view_supplier_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                style="@style/EditorFieldStyle" />

            <!-- Supplier Phone field -->
            <TextView
                android:id="@+id/view_phone"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:autoLink="phone"
                android:drawableLeft="@drawable/ic_phone"
                android:tooltipText="@string/click_to_call_supplier"
                style="@style/EditorFieldStyle" />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp"
            android:tooltipText="@string/click_to_edit_inventory_item"
            android:layout_gravity="bottom|right"
            android:src="@drawable/ic_edit"/>
    </LinearLayout>


</LinearLayout>